Add Role details

--- a/src/main/resources/static/role/view.html
+++ b/src/main/resources/static/role/view.html
@@ -23,7 +23,7 @@
                     {{role.name}}
                 </td>
                 <td class="col-md-4">
-
+                    <a ng-click="viewRoleDetails(role.id);"> View details</a>
                 </td>
             </tr>
         </table>
